# squirrel

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .periphery.yml  .swiftlint.yml  .travis.yml  BridgingFunctions.swift  CHANGELOG.md  CHANGES.md  CMakeLists.txt  Growl Registration Ticket.growlRegDict  INSTALL  INSTALL.md  Info.plist  InfoPlist.xcstrings  InputSource.swift  Localizable.xcstrings  MacOSKeyCodes.swift  Main.swift  Makefile  OVInputSourceHelper.h  OVInputSourceHelper.m  PROJECT_STRUCTURE.md  Properties.swift  README.md  README.txt  SKILL.md  Squirrel-Bridging-Header.h  Squirrel.entitlements  SquirrelApplicationDelegate.h  SquirrelApplicationDelegate.hh  SquirrelApplicationDelegate.m  SquirrelApplicationDelegate.mm  SquirrelApplicationDelegate.swift  SquirrelClient.c  SquirrelConfig.h  SquirrelConfig.hh  SquirrelConfig.m  SquirrelConfig.mm  (+41 more)
.github/ISSUE_TEMPLATE/: bug-報告.md  bug_report.md
.github/workflows/: cmake-ci.yml  commit-ci.yml  pull-request-ci.yml  release-ci.yml
Assets.xcassets/RimeIcon.appiconset/: Contents.json
Base.lproj/: MainMenu.xib  SquirrelSettingsWindow.xib
Demo/: AppDelegate.swift  TextView+Unused.swift  TextView.swift  ViewController.swift
Demo/Base.lproj/: Main.storyboard
English.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
InputController/: InputController.h  module.modulemap
Rime.icon/: icon.json
Squirrel/: Info.plist  SquirrelApplicationDelegate.h  SquirrelApplicationDelegate.m  SquirrelConfig.m  SquirrelInputController.m  SquirrelPanel.m  dsa_pub.pem  input_source.m  macos_keycode.m  main.m  utf8.cpp  utf8.h
Squirrel.xcodeproj/: project.pbxproj
ThoanTaigi.xcodeproj/: project.pbxproj
cmake/: AddRime.cmake  AddSparkle.cmake  AppleUtils.cmake
data/: CMakeLists.txt  squirrel.yaml
docs/: config-files.md  flypy-optional-features-deferred.md
en.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.strings  MainMenu.xib  SquirrelSettingsWindow.strings
flypy-rime-config/: MAC鼠须管小鹤音形挂接说明.txt  README.md  default.custom.yaml  default.yaml  flypy.schema.yaml  flypy_ok.txt  flypy_sys.txt  flypy_top.txt  flypy_user.txt  flypydz.dict.yaml  flypydz.schema.yaml  rime.lua  squirrel.custom.yaml  squirrel.yaml
lib/: directory-listing
mul.lproj/: MainMenu.xcstrings
package/: CMakeLists.txt  Distribution  PackageInfo  Squirrel-component.plist  add_data_files  bump_version  common.sh  conclusion.html  create_archive  format_pmdoc  make_archive  make_package  prepare_package  sign.bash  sign_app  test-appcast.xml
resources/: CMakeLists.txt  Info.plist  InfoPlist.xcstrings  Localizable.xcstrings  Squirrel.entitlements
rime-plugins/: librime-lua.dylib  librime-octagram.dylib  librime-predict.dylib
script/: changelog.sh
scripts/: dev-rebuild.sh  patch_flypy_schema_trimmed.py  postinstall  stage-flypy-for-data-plum.sh
sources/: AnimateNSTextView.swift  BridgingFunctions.swift  FileManager+Extension.swift  GlobalContext.swift  InputSource.swift  MacOSKeyCodes.swift  Main.swift  QuickAddWordPanel.swift  ReservedProperty.swift  Squirrel-Bridging-Header.h  SquirrelApplicationDelegate.swift  SquirrelConfig.swift  SquirrelInputController.swift  SquirrelPanel.swift  SquirrelTheme.swift  SquirrelView.swift  StatusBarManager.swift
update/: appcast.xml  release-notes.html
zh-HK.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.strings  MainMenu.xib
zh-Hans.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.strings  MainMenu.xib  SquirrelSettingsWindow.strings
zh-Hant.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.strings  MainMenu.xib  SquirrelSettingsWindow.strings
zh_CN.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
zh_TW.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
(+83 files in other folders)
